--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "java.compile.nullAnalysis.mode": "automatic",
     "marquee.widgets.npm-stats.packageNames": [
         "weather-app-frontend"
-    ]
+    ],
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
