--- a/WeatherApp-Backend/weatherApp/src/main/resources/application.yml
+++ b/WeatherApp-Backend/weatherApp/src/main/resources/application.yml
@@ -95,7 +95,7 @@ spring:
   
 # Database Settings
   datasource:
-    url: jdbc:postgresql:localhost:5432/WeatherDB
+    url: jdbc:postgresql://localhost:5432/WeatherDB
     username:  postgres
     password: pg123
     hikari:
